--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,7 @@
 				<spring.data.redis.host>47.93.89.0</spring.data.redis.host>
 				<spring.data.redis.port>6379</spring.data.redis.port>
 				<redis.pwd>foobared</redis.pwd>
+				<auth.center>http://127.0.0.1:8080</auth.center>
 			</properties>
 			<activation>
 				<activeByDefault>true</activeByDefault>
@@ -142,6 +143,7 @@
 				<spring.data.redis.host>47.93.89.0</spring.data.redis.host>
 				<spring.data.redis.port>6379</spring.data.redis.port>
 				<redis.pwd>foobared</redis.pwd>
+				<auth.center>https://jep8566.com</auth.center>
 			</properties>
 		</profile>
 	</profiles>
