--- a/service/src/main/resources/application-service.properties
+++ b/service/src/main/resources/application-service.properties
@@ -11,6 +11,7 @@ vcode.lines=8
 
 auth.vcode.timeout=180
 auth.vcode.loginFailures=3
+auth.center=${auth.center}
 
 mail.smtp.auth=true
 mail.smtp.starttls.enable=false
@@ -118,3 +119,4 @@ spring.data.redis.pool.minIdle=0
 spring.redis.nodes=${redis.nodes}
 spring.redis.cluster.soTimeout=50
 spring.redis.cluster.maxAttempts=5
+spring.redis.key.prefix=com:honda:
