--- a/service/pom.xml
+++ b/service/pom.xml
@@ -26,7 +26,7 @@
 		</dependency>
 		<dependency>
 		    <groupId>com.quincy</groupId>
-		    <artifactId>quincy-redis</artifactId>
+		    <artifactId>quincy-auth-server-redis</artifactId>
 		    <version>2.0.0</version>
 		</dependency>
 		<dependency>
