--- a/service/src/main/resources/application-service.properties
+++ b/service/src/main/resources/application-service.properties
@@ -11,6 +11,7 @@ vcode.lines=8
 
 auth.vcode.timeout=180
 auth.vcode.loginFailures=3
+auth.tmppwd.length=32
 auth.center=${auth.center}
 
 mail.smtp.auth=true
