--- a/service/src/main/resources/application-service.properties
+++ b/service/src/main/resources/application-service.properties
@@ -9,6 +9,9 @@ threadPool.blockingQueueCapacity=1000
 vcode.length=4
 vcode.lines=8
 
+cache.primary.timer.period=5000
+cache.primary.timer.delay=${cache.primary.timer.period}
+
 auth.vcode.timeout=180
 auth.vcode.loginFailures=3
 auth.tmppwd.length=32
