--- a/service-sharding/pom.xml
+++ b/service-sharding/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>honda-service-sharding</artifactId>
-	<name>service</name>
+	<name>service-sharding</name>
 	<url>http://maven.apache.org</url>
 	<parent>
 		<groupId>com.honda</groupId>
