--- a/springboot-single/src/main/resources/application.properties
+++ b/springboot-single/src/main/resources/application.properties
@@ -29,3 +29,7 @@ spring.freemarker.prefer-file-system-access=false
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.endpoint.shutdown.enabled=false
+
+spring.datasource.url=jdbc:mysql://${spring.datasource.url}?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.url.slave=jdbc:mysql://${spring.datasource.url.slave}?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.username.slave=${spring.datasource.username.slave}
