--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -149,13 +149,11 @@
 			<id>dev</id>
 			<properties>
 				<env>dev</env>
-				<spring.pid.file>/Users/maqiang/tmp/ducati.pid</spring.pid.file>
-				<path.log.logback>/Users/maqiang/tmp/logs/ducati</path.log.logback>
+				<spring.pid.file>/Users/maqiang/tmp/honda.pid</spring.pid.file>
+				<path.log.logback>/Users/maqiang/tmp/logs/honda</path.log.logback>
 				<log.level>INFO</log.level>
 				<spring.freemarker.cache>false</spring.freemarker.cache>
 				<prefix.resource>/static</prefix.resource>
-				<eureka.addr>47.93.89.0:8761</eureka.addr>
-				<eureka.instance.hostname>47.93.89.0</eureka.instance.hostname>
 			</properties>
 			<activation>
 				<activeByDefault>true</activeByDefault>
@@ -165,13 +163,11 @@
 			<id>pro</id>
 			<properties>
 				<env>pro</env>
-				<spring.pid.file>/quincy/tmp/ducati1.pid</spring.pid.file>
-				<path.log.logback>/quincy/tmp/logs/ducati1</path.log.logback>
+				<spring.pid.file>/quincy/tmp/honda.pid</spring.pid.file>
+				<path.log.logback>/quincy/tmp/logs/honda</path.log.logback>
 				<log.level>WARN</log.level>
 				<spring.freemarker.cache>true</spring.freemarker.cache>
 				<prefix.resource>https://xxx.maqiangcgq.com/ducati</prefix.resource>
-				<eureka.addr>10.27.74.163:8761</eureka.addr>
-				<eureka.instance.hostname>10.27.74.163</eureka.instance.hostname>
 			</properties>
 		</profile>
 	</profiles>
