--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -29,3 +29,25 @@ spring.freemarker.prefer-file-system-access=false
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.endpoint.shutdown.enabled=false
+
+spring.datasource.username=${spring.datasource.username}
+spring.datasource.password=${spring.datasource.password}
+spring.datasource.sharding.count=8
+spring.datasource.sharding.url.prefix=jdbc:mysql://
+spring.datasource.sharding.url.suffix=?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.sharding.0.master=${spring.datasource.sharding.0.master}
+spring.datasource.sharding.0.slave=${spring.datasource.sharding.0.slave}
+spring.datasource.sharding.1.master=${spring.datasource.sharding.1.master}
+spring.datasource.sharding.1.slave=${spring.datasource.sharding.1.slave}
+spring.datasource.sharding.2.master=${spring.datasource.sharding.2.master}
+spring.datasource.sharding.2.slave=${spring.datasource.sharding.2.slave}
+spring.datasource.sharding.3.master=${spring.datasource.sharding.3.master}
+spring.datasource.sharding.3.slave=${spring.datasource.sharding.3.slave}
+spring.datasource.sharding.4.master=${spring.datasource.sharding.4.master}
+spring.datasource.sharding.4.slave=${spring.datasource.sharding.4.slave}
+spring.datasource.sharding.5.master=${spring.datasource.sharding.5.master}
+spring.datasource.sharding.5.slave=${spring.datasource.sharding.5.slave}
+spring.datasource.sharding.6.master=${spring.datasource.sharding.6.master}
+spring.datasource.sharding.6.slave=${spring.datasource.sharding.6.slave}
+spring.datasource.sharding.7.master=${spring.datasource.sharding.7.master}
+spring.datasource.sharding.7.slave=${spring.datasource.sharding.7.slave}
