--- a/springboot-single/src/main/resources/application.properties
+++ b/springboot-single/src/main/resources/application.properties
@@ -32,4 +32,5 @@ management.endpoint.shutdown.enabled=false
 
 spring.datasource.url=jdbc:mysql://${spring.datasource.url}?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.url.slave=jdbc:mysql://${spring.datasource.url.slave}?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.username=${spring.datasource.username}
 spring.datasource.username.slave=${spring.datasource.username.slave}
