--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -154,6 +154,24 @@
 				<log.level>INFO</log.level>
 				<spring.freemarker.cache>false</spring.freemarker.cache>
 				<prefix.resource>/static</prefix.resource>
+				<spring.datasource.username>admin</spring.datasource.username>
+				<spring.datasource.password>nimda</spring.datasource.password>
+				<spring.datasource.sharding.0.master>47.93.89.0:3306/honda0</spring.datasource.sharding.0.master>
+				<spring.datasource.sharding.0.slave>47.93.89.0:3306/honda0</spring.datasource.sharding.0.slave>
+				<spring.datasource.sharding.1.master>47.93.89.0:3306/honda1</spring.datasource.sharding.1.master>
+				<spring.datasource.sharding.1.slave>47.93.89.0:3306/honda1</spring.datasource.sharding.1.slave>
+				<spring.datasource.sharding.2.master>47.93.89.0:3306/honda2</spring.datasource.sharding.2.master>
+				<spring.datasource.sharding.2.slave>47.93.89.0:3306/honda2</spring.datasource.sharding.2.slave>
+				<spring.datasource.sharding.3.master>47.93.89.0:3306/honda3</spring.datasource.sharding.3.master>
+				<spring.datasource.sharding.3.slave>47.93.89.0:3306/honda3</spring.datasource.sharding.3.slave>
+				<spring.datasource.sharding.4.master>47.93.89.0:3306/honda4</spring.datasource.sharding.4.master>
+				<spring.datasource.sharding.4.slave>47.93.89.0:3306/honda4</spring.datasource.sharding.4.slave>
+				<spring.datasource.sharding.5.master>47.93.89.0:3306/honda5</spring.datasource.sharding.5.master>
+				<spring.datasource.sharding.5.slave>47.93.89.0:3306/honda5</spring.datasource.sharding.5.slave>
+				<spring.datasource.sharding.6.master>47.93.89.0:3306/honda6</spring.datasource.sharding.6.master>
+				<spring.datasource.sharding.6.slave>47.93.89.0:3306/honda6</spring.datasource.sharding.6.slave>
+				<spring.datasource.sharding.7.master>47.93.89.0:3306/honda7</spring.datasource.sharding.7.master>
+				<spring.datasource.sharding.7.slave>47.93.89.0:3306/honda7</spring.datasource.sharding.7.slave>
 			</properties>
 			<activation>
 				<activeByDefault>true</activeByDefault>
@@ -168,6 +186,24 @@
 				<log.level>WARN</log.level>
 				<spring.freemarker.cache>true</spring.freemarker.cache>
 				<prefix.resource>https://xxx.maqiangcgq.com/ducati</prefix.resource>
+				<spring.datasource.username>admin</spring.datasource.username>
+				<spring.datasource.password>nimda</spring.datasource.password>
+				<spring.datasource.sharding.0.master>47.93.89.0:3306/honda0</spring.datasource.sharding.0.master>
+				<spring.datasource.sharding.0.slave>47.93.89.0:3306/honda0</spring.datasource.sharding.0.slave>
+				<spring.datasource.sharding.1.master>47.93.89.0:3306/honda1</spring.datasource.sharding.1.master>
+				<spring.datasource.sharding.1.slave>47.93.89.0:3306/honda1</spring.datasource.sharding.1.slave>
+				<spring.datasource.sharding.2.master>47.93.89.0:3306/honda2</spring.datasource.sharding.2.master>
+				<spring.datasource.sharding.2.slave>47.93.89.0:3306/honda2</spring.datasource.sharding.2.slave>
+				<spring.datasource.sharding.3.master>47.93.89.0:3306/honda3</spring.datasource.sharding.3.master>
+				<spring.datasource.sharding.3.slave>47.93.89.0:3306/honda3</spring.datasource.sharding.3.slave>
+				<spring.datasource.sharding.4.master>47.93.89.0:3306/honda4</spring.datasource.sharding.4.master>
+				<spring.datasource.sharding.4.slave>47.93.89.0:3306/honda4</spring.datasource.sharding.4.slave>
+				<spring.datasource.sharding.5.master>47.93.89.0:3306/honda5</spring.datasource.sharding.5.master>
+				<spring.datasource.sharding.5.slave>47.93.89.0:3306/honda5</spring.datasource.sharding.5.slave>
+				<spring.datasource.sharding.6.master>47.93.89.0:3306/honda6</spring.datasource.sharding.6.master>
+				<spring.datasource.sharding.6.slave>47.93.89.0:3306/honda6</spring.datasource.sharding.6.slave>
+				<spring.datasource.sharding.7.master>47.93.89.0:3306/honda7</spring.datasource.sharding.7.master>
+				<spring.datasource.sharding.7.slave>47.93.89.0:3306/honda7</spring.datasource.sharding.7.slave>
 			</properties>
 		</profile>
 	</profiles>
