--- a/service/src/main/resources/application-service.properties
+++ b/service/src/main/resources/application-service.properties
@@ -1,5 +1,6 @@
 locales=zh_cn,zh_tw,en_us
 env=${env}
+access-control-allow-origin={access-control-allow-origin}
 
 threadPool.corePoolSize=100
 threadPool.maximumPoolSize=100
